--- a/src/authentication/signup/signup.css
+++ b/src/authentication/signup/signup.css
@@ -13,3 +13,18 @@
 .progress-strong {
   background-color: #008000;
 }
+@keyframes bounce {
+  0%,
+  20%,
+  50%,
+  80%,
+  100% {
+    transform: translateY(0);
+  }
+  40% {
+    transform: translateY(-20px);
+  }
+  60% {
+    transform: translateY(-10px);
+  }
+}
